--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,7 +61,7 @@
   --primary-pink: #ec4899;
   --dark-bg: #0a0a0a;
   --darker-bg: #050505;
-  --font-primary: "Parkinsans", sans-serif;
+  --font-primary: "Parkins Sans", sans-serif;
 }
 
 * {
